--- a/style.css
+++ b/style.css
@@ -46,18 +46,18 @@ li{
 }
 
 
-ul > .flex-container > li > div {
+.flex-container > li> a > div{
   background-color: white;
   height: 280px;
   width:400px;
   margin: 13px;
   border: 1px solid black;
   padding:3%;
-
-
+  color:black;
+  text-decoration: none;
 }
 
-.box1{
+.box1 {
   text-align:center;
   line-height: 25px;
   font-size: 17px;
@@ -80,18 +80,7 @@ ul > .flex-container > li > div {
   font-size: 28px
 }
 
-ul > li > .imgAppended > a > img{
-  height:280px;
-  width:400px;
-  padding:3%;
-  margin:13px;
-  border: 1px solid black;
-  padding:3%;
-  transition: transform .15s; 
-
-}
-
-ul > li > .imgAppended > a:hover img{
+.flex-container > li> a:hover > div{
   transform: scale(1.1);
 }
 
@@ -112,6 +101,14 @@ div p{
   top: 20%; 
   color:white;
   text-align:center;
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:50%;
+  height:50%;
 }
 
 
