--- a/style.css
+++ b/style.css
@@ -45,8 +45,7 @@ li{
   margin-left:5%;
 }
 
-
-.flex-container > li> a > div{
+li a div{
   background-color: white;
   height: 280px;
   width:400px;
@@ -56,6 +55,10 @@ li{
   color:black;
   text-decoration: none;
 }
+
+  a{
+    text-decoration: none;
+  }
 
 .box1 {
   text-align:center;
@@ -83,7 +86,6 @@ li{
 .flex-container > li> a:hover > div{
   transform: scale(1.1);
 }
-
 
 textarea{
   height:250px;
