--- a/style.css
+++ b/style.css
@@ -75,21 +75,19 @@ textarea{
   margin:2%;
 }
 
-div p{
-  position:absolute;
-  right: 50%; 
-  top: 20%; 
-  color:white;
-  text-align:center;
+.relative{
+  position: relative;
+  text-align: center;
+  color: white;
 }
 
-img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width:50%;
-  height:50%;
+p#content{
+   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
 
 .dropdown{
   display:flex;
