--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   background-position:center, 
   background-size: cover;
   opacity:.17;*/
+  background-image: url('https://www.geeksundergrace.com/wp-content/uploads/2016/06/space.jpg');
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 button, input[type="text"] {
@@ -65,10 +69,13 @@ li{
 
 textarea{
   height:250px;
-  width:90%;
+  width:70%;
   margin:3%;
   font-size:20px;
   font-family:Helvetica;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .send-to{
@@ -88,7 +95,9 @@ p#content{
   transform: translate(-50%, -50%);
 }
 
-
+h1, label{
+  color:white;
+}
 
 
 
