--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ li{
   background-color: white;
   height: 330px;
   width:440px;
-  margin: 5%;
+  margin: 3%;
   border: 1px solid black;
   padding:3%;
   color:black;
@@ -86,6 +86,16 @@ p#content{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.explanation{
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top:5%;
+  margin-bottom:3%;
+  width:60%;
+  line-height:1.5;
 }
 
 
@@ -128,16 +138,11 @@ h1, label{
   display:flex;
   flex-direction: row;
   justify-content:center;
-  margin:15px;
+  margin:10px;
 }
 
 select {
   margin:10px;
-}
-
-h3{
-  margin:28px;
-  font-family:Helvetica;
 }
 
 h2{
