--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  /*
-  background-image: url('https://www.geeksundergrace.com/wp-content/uploads/2016/06/space.jpg');
+  background-image: linear-gradient(0deg, rgba(20, 20, 20, 0.3), rgba(20, 20, 20, 0.3)), url('https://www.geeksundergrace.com/wp-content/uploads/2016/06/space.jpg');
   background-position: center center;
   background-size: cover;
-  background-attachment: fixed;*/
+  background-attachment: fixed;
+
 }
+
 
 button, input[type="text"] {
   padding: 5px;
@@ -56,10 +57,8 @@ li{
   height: 330px;
   width:440px;
   margin: 3%;
-  border: 1px solid black;
   padding:3%;
   color:black;
-  text-decoration: none;
 }
 
 .flex-container > li:hover > div{
@@ -94,11 +93,56 @@ p#content{
   line-height:1.5;
 }
 
-
-/*
-h1, label{
+h1{
+  text-align:center;
   color:white;
+  font-size:34px;
 }
+
+label{
+  text-align:center;
+  color:white;
+  font-weight: bold;
+  font-size:20px;
+  display:inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h6{
+  text-align:center;
+  color:white;
+  font-weight: bold;
+  font-size:12px;
+  position: absolute;
+  top: 51%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
+input[type=text]{
+  display:inline-block;
+  position: absolute;
+  top: 61%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+input[type=submit]{
+  margin-left:15px;
+  display:block;
+  width:6%;
+  margin:0 auto;
+  position: absolute;
+  top: 68%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+/*
 
 .bottom-left {
   position: absolute;
@@ -134,6 +178,7 @@ h1, label{
   justify-content:center;
   margin:10px;
   display:inline-block;
+  text-align:center;
 }
 
 button{
@@ -149,7 +194,7 @@ select {
 }
 
 h2{
-  margin-top:20px;
+  text-align:center;  
 }
 
 
