--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ li{
 }
 
 .flex-container{
-  margin-top:5%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -54,11 +53,10 @@ li{
   text-align:center;
   font-size: 23px;
   background-color: white;
-  height: 330px;
-  width:440px;
+  height: 390px;
+  width:530px;
   margin: 3%;
   padding:3%;
-  color:black;
 }
 
 .flex-container > li:hover > div{
@@ -177,12 +175,12 @@ input[type=submit]{
   flex-direction: row;
   justify-content:center;
   margin:10px;
-  display:inline-block;
   text-align:center;
 }
 
 button{
-  display:inline-block;
+  display:block;
+  margin:0 auto;
 }
 
 .send-to{
@@ -195,6 +193,7 @@ select {
 
 h2{
   text-align:center;  
+  margin:2%;
 }
 
 
@@ -209,16 +208,46 @@ h2{
 
 }
 
+@media only screen and (max-width:800px){
+
+  p.explanation{
+    width:80%;
+    font-size:15px;
+
+  }
+
+  input[type=submit]{
+    width:15%;
+  }
+}
+
 @media only screen and (max-width:600px){
+
 
   .box{
     height: 270px;
     width:380px;
     font-size:18px;
   }
+
 }
 
 
+@media only screen and (max-width:448px){
+
+
+  .box{
+    height: 250px;
+    width:340px;
+    font-size:18px;
+  }
+
+  p.explanation{
+    font-size:13px;
+    width:100%;
+  }
+
+}
 
 
 
