--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-image: linear-gradient(0deg, rgba(20, 20, 20, 0.3), rgba(20, 20, 20, 0.3)), url('https://www.geeksundergrace.com/wp-content/uploads/2016/06/space.jpg');
+  background-image: linear-gradient(0deg, rgba(20, 20, 20, 0.3), rgba(20, 20, 20, 0.3)), url('https://cdn.spacetelescope.org/archives/images/wallpaper2/heic2007a.jpg');
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
